--- a/test/vehicles_bend.tex
+++ b/test/vehicles_bend.tex
@@ -33,28 +33,28 @@
 
     \train[forward, length=5cm,
       bend right at={(T1-6)}, bend left at={(T2-7)},
-      shift label={(T1-6)}, label align=left] at (T2-8) label (T2 T2 T1 bend);
+      shift label={(T1-6)}, label align=right] at (T2-8) label (T2 T2 T1 bend);
     \train[forward, length=5cm,
       bend left at={(T4-6)},bend right at={(T3-7)},
-      shift label={(T4-6)}, label align=left] at (T3-8) label (T3 T3 T4 bend);
+      shift label={(T4-6)}, label align=right] at (T3-8) label (T3 T3 T4 bend);
     \train[backward, length=5cm,
       bend right at={(T1-1)}, bend left at={(T2-2)},
-      shift label={(T2-2)}, label align=right] at (T1-0) label (T1 T1 T2 bend);
+      shift label={(T2-2)}, label align=left] at (T1-0) label (T1 T1 T2 bend);
     \train[backward, length=5cm,
       bend left at={(T4-1)},bend right at={(T3-2)},
-      shift label={(T3-2)}, label align=right] at (T4-0) label (T4 T3 T3 bend);
+      shift label={(T3-2)}, label align=left] at (T4-0) label (T4 T3 T3 bend);
     \train[backward, length=2cm,
       bend left at={(T6-1)},
       shift label={(T6-1)}, label align=left] at (T6-0) label (A6 T6 bend);
     \train[forward, length=2cm,
       bend right at={(T5-3)},
-      shift label={(T5-2)}, label align=right] at (T5-4) label (T5 T5 bend);
+      shift label={(T5-3)}, label align=right] at (T5-4) label (T5 T5 bend);
     \train[backward, length=2cm,
       bend right at={(T5-5)},
-      shift label={(T5-6)}, label align=left] at (T5-4) label (T5 T5 bend);
+      shift label={(T5-5)}, label align=left] at (T5-4) label (T5 T5 bend);
     \train[forward, length=2cm,
       bend left at={(T6-7)},
-      shift label={(T6-7)}, label align=left] at (T6-8) label (B6 T6 bend);
+      shift label={(T6-7)}, label align=right] at (T6-8) label (B6 T6 bend);
 
   \end{tikzpicture}
 \end{document}
